--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
-{ "name": "nifty-mongoose-types"
-, "description":  "More types for mongoose"
-, "version":  "1.0.4"
-, "author": "Brian Noguchi"
-, "dependencies": { "mongoose": ">= 1.0.16"}
-, "keywords": [ "mongoose", "mongo", "mongodb", "types" ]
-, "scripts": { "test": "make test" }
-, "engines": { "node": ">= 0.1.101" }
-, "main": "./index"
-, "licenses": [ { "type": "The MIT License", "url": "http://www.opensource.org/licenses/mit-license.php" } ]
+{
+  "name": "nifty-mongoose-types",
+  "version": "0.0.1",
+  "description": "Additional types for Mongoose based off @bnoguchi's mongoose-types module",
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "mongoose": ">= 1.0.16"
+  },
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/niftylettuce/nifty-mongoose-types.git"
+  },
+  "author": "Nick Baugh <niftylettuce@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/niftylettuce/nifty-mongoose-types/issues"
+  },
+  "homepage": "https://github.com/niftylettuce/nifty-mongoose-types"
 }
